--- a/src/main/resources/conf/misc.properties
+++ b/src/main/resources/conf/misc.properties
@@ -1,3 +1,7 @@
 ### redis ###
 redis.host=127.0.0.1
 redis.port=6379
+
+### mongo ###
+mongo.rs1.node1=127.0.0.1:27017
+mongo.rs1.node2=127.0.0.1:27017
