--- a/pom.xml
+++ b/pom.xml
@@ -605,6 +605,12 @@
             <artifactId>jzlib</artifactId>
             <version>1.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>3.0.3</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>jugg</finalName>
