--- a/pom.xml
+++ b/pom.xml
@@ -611,6 +611,13 @@
             <artifactId>kryo</artifactId>
             <version>3.0.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>jugg</finalName>
